@@ -74,7 +74,7 @@ __0:    ;
 ;This must be just before cwAPIpatch
 ;
 IFDEF CONTRIB
-cwDevelBranch   dw 0
+cwDevelFork     dw 0
 ENDIF
 cwIdentity      db "CAUSEWAY"
 cwMajorVersion  db 0
