@@ -1,3 +1,11 @@
+causeway-dosx (3.62tk-build20220325-1~@distro@) @distro@; urgency=medium
+
+  * Internal tweaks for CauseWay version number handling.
+  * Try to make int 0x21, ah = 0x4a, properly return maximum possible block
+    reallocation size.  FIXME.
+
+ -- TK Chia <tkchia@users.noreply.github.com>  Fri, 25 Mar 2022 17:57:46 +0000
+
 causeway-dosx (3.61tk-build20220323-1~@distro@) @distro@; urgency=medium
 
   * Add a "development branch" field to the CauseWay version number.
